# ssbexo

./: Cargo.toml  README.md
exo-utils/: cargo.toml
exo-utils/src/: armstrong.rs  attack.rs  attack_xx4.rs  attackinfo_struct.rs  battle_object.rs  buttons.rs  cancel.rs  catch.rs  check_attack.rs  cloud.rs  cloud_meter.rs  collision_struct.rs  command_input.rs  common_ui_enable_disable.rs  create_item_param.rs  daisy.rs  damage.rs  donkey.rs  edge.rs  extern_func.rs  fighter_common.rs  flydata.rs  ganon.rs  gekkouga.rs  glide.rs  hook.rs  ike.rs  inkling.rs  kinetic_energy.rs  kirby.rs  knockback.rs  knockback_calc_context.rs  knockback_func.rs  lib.rs  link.rs  littlemac.rs  mario.rs  mariod_meter.rs  metaknight.rs  miifighter.rs  (+19 more)
exo-var/: cargo.toml
exo-var/src/: armstrong.rs  bayonetta.rs  captain.rs  chrom.rs  cloud.rs  consts.rs  dedede.rs  demon.rs  dolly.rs  donkey.rs  edge.rs  element.rs  fox.rs  ganon.rs  gaogaen.rs  gekkouga.rs  globals.rs  ike.rs  inkling.rs  ken.rs  kirby.rs  koopa.rs  koopajr.rs  krool.rs  lib.rs  link.rs  littlemac.rs  lucario.rs  lucas.rs  lucina.rs  luigi.rs  mario.rs  mariod.rs  marth.rs  metaknight.rs  miifighter.rs  miiswordsman.rs  murabito.rs  ness.rs  palutena.rs  (+18 more)
fighters/armstrong/: cargo.toml
fighters/bayonetta/: cargo.toml
fighters/brave/: cargo.toml
fighters/buddy/: cargo.toml
fighters/captain/: cargo.toml
fighters/chrom/: cargo.toml
fighters/cloud/: cargo.toml
fighters/common/: cargo.toml
fighters/daisy/: cargo.toml
fighters/dedede/: cargo.toml
fighters/demon/: cargo.toml
fighters/diddy/: cargo.toml
fighters/dolly/: cargo.toml
fighters/donkey/: cargo.toml
fighters/duckhunt/: cargo.toml
fighters/edge/: cargo.toml
fighters/eflame/: cargo.toml
fighters/elight/: cargo.toml
fighters/falco/: cargo.toml
fighters/fox/: cargo.toml
fighters/gamewatch/: cargo.toml
fighters/ganon/: cargo.toml
fighters/gaogaen/: cargo.toml
fighters/gekkouga/: cargo.toml
src/: fighters.rs  lib.rs
src/captain/: mod.rs  (+2 more)
(+2981 files in other folders)
