[package]
name = "plugin"
version = "0.1.0"
authors = ["phazoganon"]
edition = "2018"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
bitflags = "1.3.2"
lazy_static = "1.4.0"
modular-bitfield = "0.11.2"
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
skyline_smash = { git = "https://github.com/blu-dev/skyline-smash.git", features = ["weak_l2cvalue"] }
smash_script = { git = "https://github.com/blu-dev/smash-script.git", branch = "development" }
smashline = { git = "https://github.com/blu-dev/smashline.git", branch = "development" }
smash2 = { package = "smash", git = "https://github.com/blu-dev/smash-rs" }

[profile.dev]
panic = "abort"

[profile.release]
opt-level = 'z'
panic = "abort"
lto = true
codegen-units = 1
