[package]
name = "ssbexo"
version = "0.8.0"
authors = ["phazoganon"]
edition = "2021"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
bitflags = "1.3.2"
colorgrad = "0.6.2"
lazy_static = "1.4.0"
modular-bitfield = "0.11.2"
once_cell = "1.15.0"
parking_lot = "0.11.2"
skyline = { git = "https://github.com/ultimate-research/skyline-rs" }
skyline_smash = { git = "https://github.com/blu-dev/skyline-smash.git", features = ["weak_l2cvalue"] }
skyline-web = { git = "https://github.com/skyline-rs/skyline-web", optional = true }
smash_script = { git = "https://github.com/blu-dev/smash-script.git", branch = "development" }
smash_singletons = { git = "https://github.com/WuBoytH/smash_singletons.git" }
smashline = { git = "https://github.com/HDR-Development/smashline" }
smash2 = { package = "smash", git = "https://github.com/blu-dev/smash-rs" }

[profile.dev]
panic = "abort"

[profile.release]
opt-level = 'z'
panic = "abort"
lto = true
codegen-units = 1

[features]
default = ["skyline-web"]
main_nro = ["skyline-web"]